style: fix responsive hljs font-size on mobile

--- a/assets/styles/components/_highlightjs.scss
+++ b/assets/styles/components/_highlightjs.scss
@@ -34,8 +34,8 @@ pre {
 	font-weight: bold;
 	// white-space: pre-wrap;
 
-	@media screen and (max-width: 768px) {
-		font-size: 12px;
+	@media (max-width: 768px) {
+		font-size: 12px !important;
 	}
 
 	code {
